# cpp

./: .travis.yml  A2arm_8h_source.html  AX18_8h_source.html  Ax18ManipulatorRobot_8h_source.html  BarrettWamArmRobot_8h_source.html  CMEX_raw_fkm.cpp  CMakeLists.txt  ComauSmartSixRobot_8h_source.html  Comau_8h_source.html  DQ.cpp  DQ.h  DQ_8h_source.html  DQ__ClassicQPController_8h_source.html  DQ__Constants_8h_source.html  DQ__CooperativeDualTaskSpace_8h_source.html  DQ__DifferentialDriveRobot_8h_source.html  DQ__Geometry_8h_source.html  DQ__HolonomicBase_8h_source.html  DQ__KinematicConstrainedController_8h_source.html  DQ__KinematicController_8h_source.html  DQ__Kinematics_8h_source.html  DQ__LinearAlgebra_8h_source.html  DQ__Math_8h_source.html  DQ__MobileBase_8h_source.html  DQ__PseudoinverseController_8h_source.html  DQ__QuadraticProgrammingController_8h_source.html  DQ__QuadraticProgrammingSolver_8h_source.html  DQ__SerialManipulatorDH_8h_source.html  DQ__SerialManipulator_8h_source.html  DQ__SerialWholeBody_8h_source.html  DQ__WholeBody_8h_source.html  DQ__kinematics_8h_source.html  DQ_controller.h  DQ_kinematics.cpp  DQ_kinematics.h  Doxyfile  KukaLw4Robot_8h_source.html  KukaYoubotRobot_8h_source.html  Kukka_8h_source.html  Makefile  (+162 more)
.github/ISSUE_TEMPLATE/: missing-unexpected-functionality.md
.github/actions/install-dqrobotics-linux/: action.yml  clone.sh  install.sh
.github/scripts/macos/: install.sh  install_prerequisites.sh
.github/scripts/ubuntu/: build.sh  install.sh  install_prerequisites.sh
.github/scripts/windows/: build.ps1  install.ps1  install_prerequisites.ps1
.github/workflows/: cpp_build_and_test.yml  cpp_build_macos.yml  cpp_build_ubuntu.yml  cpp_build_windows.yml
controllers/: DampedNumericalFilteredController.cpp  DampedNumericalFilteredController.h  DampedNumericalFilteredControllerJointLimits.cpp  HIRTController.cpp  HIRTController.h  HInfinityRobustController.cpp  HInfinityRobustController.h  OrdinaryPoseController.cpp  OrdinaryPoseController.h  TranslationFirstPoseController.cpp  TranslationFirstPoseController.h
debian/: changelog  control  copyright  rules
docker/: README.md
docker/ubuntu_24_04/: Dockerfile  compose.yml
docker/ubuntu_26_04/: Dockerfile  compose.yml
examples/: Comau_control_dq_kinematics.m  Comau_control_interface.m  Makefile  schunk_allcontrollers_example.cpp  schunk_hinfinitycontrol_example.cpp  wam4_translationfirstcontrol_example.cpp  wam_chiaveriniwithjointlimits_example.cpp
include/dqrobotics/: DQ.h  DQ_CooperativeDualTaskSpace.h  DQ_controller.h  DQ_kinematics.h
include/dqrobotics/internal/: _dq_linesegment.h
include/dqrobotics/robot_control/: DQ_ClassicQPController.h  DQ_KinematicConstrainedController.h  DQ_KinematicController.h  DQ_NumericalFilteredPseudoInverseController.h  DQ_PseudoinverseController.h  (+3 more)
robot_dh/: A2arm.h  AX18.h  Kukka.h  Schunk.h  WAM.h  WAM4.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+6 more)
src/: DQ.cpp  DQ.h  DQ_CooperativeDualTaskSpace.cpp  DQ_kinematics.cpp
src/controllers/: OrdinaryPoseController.h  TranslationFirstPoseController.h
src/internal/: _dq_linesegment.cpp
src/legacy/: DQ_kinematics.cpp
src/robot_control/: DQ_ClassicQPController.cpp  DQ_KinematicConstrainedController.cpp  DQ_KinematicController.cpp  DQ_NumericalFilteredPseudoInverseController.cpp  DQ_PseudoinverseController.cpp  DQ_QuadraticProgrammingController.cpp  DQ_TaskSpacePseudoInverseController.cpp  DQ_TaskspaceQuadraticProgrammingController.cpp
src/robot_dh/: AX18.h  Comau.h  Schunk.h
src/robot_modeling/: DQ_CooperativeDualTaskSpace.cpp  DQ_DifferentialDriveBase.cpp  DQ_DifferentialDriveRobot.cpp  DQ_FreeFlyingRobot.cpp  DQ_HolonomicBase.cpp  DQ_Kinematics.cpp  DQ_MobileBase.cpp  DQ_SerialManipulator.cpp  DQ_SerialManipulatorDH.cpp  DQ_SerialManipulatorDenso.cpp  DQ_SerialManipulatorMDH.cpp  DQ_SerialWholeBody.cpp  DQ_WholeBody.cpp
src/robot_modelling/: DQ_Kinematics.cpp
src/robots/: Ax18ManipulatorRobot.cpp  BarrettWamArmRobot.cpp  ComauSmartSixRobot.cpp  FrankaEmikaPandaRobot.cpp  KukaLw4Robot.cpp  KukaYoubotRobot.cpp
src/unit_testing/: dqtest_main.cpp
src/utils/: DQ_Geometry.cpp  DQ_LinearAlgebra.cpp  DQ_Math.cpp
trunk/C++/: CMEX_jacobian.cpp  CMakeLists.txt  DQ.cpp  DQ.h  DQ_kinematics.cpp  DQ_kinematics.h  Makefile  Matriz.cpp  Matriz.h  README.txt  dqrobotics.pro
trunk/C++/@DQ_kin/: DQ_kin.asv  DQ_kin.m
trunk/C++/controllers/: DampedNumericalFilteredController.cpp  DampedNumericalFilteredController.h  DampedNumericalFilteredControllerJointLimits.cpp  DampedNumericalFilteredControllerJointLimits.h  HIRTController.cpp  HIRTController.h  HInfinityRobustController.cpp  HInfinityRobustController.h  OrdinaryPoseController.cpp  OrdinaryPoseController.h  TranslationFirstPoseController.cpp  TranslationFirstPoseController.h
trunk/C++/debian/: control  rules
trunk/C++/examples/: Makefile  plots.m  schunk_allcontrollers_example.cpp  timetest.m
trunk/C++/include/dqrobotics/: DQ.h  DQ_controller.h  DQ_kinematics.h
trunk/C++/include/dqrobotics/robot_dh/: AX18.h  Schunk.h  WAM.h
trunk/C++/robot_dh/: AX18.h  Schunk.h  WAM.h
trunk/C++/src/: DQ.cpp  DQ_controller.h  DQ_kinematics.cpp
trunk/C++/src/controllers/: DampedNumericalFilteredController.h  DampedNumericalFilteredControllerJointLimits.h  HInfinityRobustController.cpp  HInfinityRobustController.h  TranslationFirstPoseController.cpp
trunk/C++/src/robot_dh/: WAM4.h
trunk/C++/unit_testing/: DQTest.cpp  DQTest.h
unit_testing/: DQTest.cpp  DQTest.h  Makefile
windows/: README.md  windows_cmake_config.sh  windows_pack.sh
(+41 files in other folders)
